vlib/v/checker/tests/struct_field_generic_struct_unknown_type_err.out
vlib/v/checker/tests/struct_field_generic_struct_unknown_type_err.vv:9:4: error: unknown type `UnknownType`
    7 | 
    8 | struct MyType {
    9 |     a Maybe[UnknownType]
      |       ~~~~~~~~~~~~~~~~~~
   10 | }
   11 |
vlib/v/checker/tests/struct_field_generic_struct_unknown_type_err.vv:13:6: error: unknown type `UnknownType`
   11 | 
   12 | fn main() {
   13 |     _ = MyType{}
      |         ~~~~~~~~
   14 | }
