vlib/v/checker/tests/struct_field_generic_struct_unknown_type_err.vv
module main

pub struct Maybe[T] {
	present bool
	val     T
}

struct MyType {
	a Maybe[UnknownType]
}

fn main() {
	_ = MyType{}
}
